Fixes overflow bug

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,6 +1,10 @@
-html, body, .is-fullsize {
+html, body, .is-fullsize:not(.columns) {
     width: 100%;
     height: 100%;
+}
+.is-fullsize.columns {
+    width: 100%;
+    min-height: 100%;
 }
 .with-background {
     background: linear-gradient(
@@ -27,10 +31,6 @@ html, body, .is-fullsize {
 .is-shadowed {
     box-shadow: 1px 2px black;
 }
-.has-no-overflow {
-    overflow-y: hidden;
-}
 .right-card {
-    overflow-y: scroll;
     min-height: 100%;
 }
